--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,7 +1,18 @@
-FROM node:18.16.0-bullseye-slim
+FROM node:lts-buster
 
-WORKDIR /app
-COPY package*.json ./
-RUN npm install
+RUN apt-get update && \
+  apt-get install -y \
+  ffmpeg \
+  imagemagick \
+  webp && \
+  apt-get upgrade -y && \
+  npm i pm2 -g && \
+  rm -rf /var/lib/apt/lists/*
+
+COPY package.json .
+
+RUN yarn install
+
 COPY . .
+
 CMD ["npm", "start"]
